Printed MIS is best

--- a/HelloWorld.ipynb
+++ b/HelloWorld.ipynb
@@ -4,7 +4,7 @@
   "metadata": {
     "colab": {
       "provenance": [],
-      "authorship_tag": "ABX9TyMq+89//oG0EUkrfUmX2HH9",
+      "authorship_tag": "ABX9TyNJtNrr44DzIF8U/9fPSWCW",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -28,7 +28,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 1,
+      "execution_count": null,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/"
@@ -47,6 +47,36 @@
       ],
       "source": [
         "print (\"hello world\")"
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "(\"mis is best!\")"
+      ],
+      "metadata": {
+        "id": "qW44U7svDbWJ",
+        "outputId": "5c7face3-d97f-47cc-8713-03b749426542",
+        "colab": {
+          "base_uri": "https://localhost:8080/",
+          "height": 35
+        }
+      },
+      "execution_count": 1,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "'mis is best!'"
+            ],
+            "application/vnd.google.colaboratory.intrinsic+json": {
+              "type": "string"
+            }
+          },
+          "metadata": {},
+          "execution_count": 1
+        }
       ]
     }
   ]
